--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;600&display=swap');
-
 html {
   box-sizing: border-box;
 }
@@ -12,8 +10,9 @@ html {
 body {
   font-family: 'Barlow', sans-serif;
   font-weight: normal;
-  background: #EFF6FF;
+  background: #FFFFFF;
   color: #2A4A5C;
+  font-size: 16px;
 }
 
 .wrapper {
@@ -30,16 +29,182 @@ section {
   background-image: url("img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .logo {
   margin: 5% 0 0 5%;
-  max-width: 15%;
+  min-width: 15%;
+  max-width: 20%;
 }
 
 .register {
-  margin: 10% 5%;
+  margin: 5% 5%;
 }
+
+h1 {
+  font-size: 32px;
+}
+
+h1 + p {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 20px 0 50px;
+  color: #7B8A92;
+}
+
+.register__btn {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.register__btn > button {
+  display: flex;
+  width: 100%;
+  border: none;
+  padding: 15px;
+  align-items: center;
+  gap: 20px;
+  color: #FFFFFF;
+  font-family: 'Barlow', sans-serif;
+}
+
+.register__btn > button > span {
+  width: 20px;
+  height: 20px;
+}
+
+{
+  color: #3698FB;
+  color: #7B8A92;
+  color: #96A5B1;
+  color: #AFAFAF;
+  color: #EEEEEE;
+  color: #FFFFFF;
+}
+
+.register__btn > button:first-of-type {
+  background: #255A9B;
+  padding-left: 10px;
+}
+
+.register__btn > button:last-of-type {
+  background: #0076B6;
+}
+
+.register__line {
+  overflow: hidden;
+  text-align: center;
+  font-size: 12px;
+  margin: 70px 0;
+}
+
+.register__line span {
+  display: inline-block;
+  vertical-align: middle;
+}
+.register__line:before,
+.register__line:after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 20%;
+  height: 1px;
+  background-color: #EEEEEE;
+  position: relative;
+}
+.register__line:before {
+  margin-left: -100%;
+  left: -10px;
+}
+.register__line:after {
+  margin-right: -100%;
+  right: -10px;
+}
+
+.contacts {
+  display: flex;
+  gap: 40px;
+}
+
+.contacts--wrapper {
+  margin-bottom: 1rem;
+  flex: 1;
+}
+
+.contacts__label {
+  display: block;
+  margin-bottom: 0.25rem;
+}
+
+.contacts__input {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #EEEEEE;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.contacts__input::placeholder {
+  color: #212529;
+  opacity: 0.4;
+}
+
+.contacts__input:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #EEEEEE;
+  outline: 0;
+  border-left: 1px solid #3698FB;
+}
+
+.contacts--wrapper {
+  position: relative;
+}
+
+.contacts--wrapper .contacts__input {
+  height: calc(3.5rem + 2px);
+  line-height: 1.25;
+  padding: 1rem 0.75rem;
+}
+
+.contacts--wrapper .contacts__label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 1rem .75rem;
+  pointer-events: none;
+  transform-origin: 0 0;
+  transition: opacity .15s ease-in-out, transform .15s ease-in-out;
+}
+
+.contacts--wrapper .contacts__input::-moz-placeholder {
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input::placeholder {
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input:focus {
+  padding-top: 1.625rem;
+  padding-bottom: .625rem;
+}
+
+.contacts--wrapper .contacts__input:focus~.contacts__label {
+  opacity: .65;
+  transform: scale(.85) translateY(-.75rem) translateX(.15rem);
+}
+
 
 @font-face {
   font-family: 'Barlow';
