--- a/style/main.css
+++ b/style/main.css
@@ -10,15 +10,17 @@ html {
 body {
   font-family: 'Barlow', sans-serif;
   font-weight: normal;
-  background: #FFFFFF;
+  background: #EFF6FF;
   color: #2A4A5C;
-  font-size: 16px;
+  font-size: 1rem;
+  height: 100vh;
 }
 
 .wrapper {
-  height: 100vh;
   width: 100%;
   display: flex;
+  padding: 4rem 2.5rem;
+  height: 100%;
 }
 
 section {
@@ -39,40 +41,45 @@ section {
 }
 
 .register {
+  background: #FFFFFF;
+}
+
+.register--wrapper {
   margin: 5% 5%;
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 h1 + p {
-  font-size: 20px;
-  font-weight: 400;
-  margin: 20px 0 50px;
+  font-size: 1.25rem;
+  margin: 1.25rem 0 3.125rem;
   color: #7B8A92;
 }
 
 .register__btn {
   display: flex;
   justify-content: space-between;
-  gap: 40px;
+  gap: 2.5rem;
 }
 
 .register__btn > button {
   display: flex;
   width: 100%;
   border: none;
-  padding: 15px;
+  padding: 0.9375rem;
   align-items: center;
-  gap: 20px;
+  gap: 1.25rem;
   color: #FFFFFF;
   font-family: 'Barlow', sans-serif;
+  cursor: pointer;
 }
 
 .register__btn > button > span {
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 {
@@ -86,7 +93,7 @@ h1 + p {
 
 .register__btn > button:first-of-type {
   background: #255A9B;
-  padding-left: 10px;
+  padding-left: 0.625rem;
 }
 
 .register__btn > button:last-of-type {
@@ -96,8 +103,8 @@ h1 + p {
 .register__line {
   overflow: hidden;
   text-align: center;
-  font-size: 12px;
-  margin: 70px 0;
+  font-size: 0.75rem;
+  margin: 3rem 0;
 }
 
 .register__line span {
@@ -110,27 +117,29 @@ h1 + p {
   display: inline-block;
   vertical-align: middle;
   width: 20%;
-  height: 1px;
+  height: 0.0625rem;
   background-color: #EEEEEE;
   position: relative;
 }
 .register__line:before {
   margin-left: -100%;
-  left: -10px;
+  left: -0.625rem;
 }
 .register__line:after {
   margin-right: -100%;
-  right: -10px;
+  right: -0.625rem;
 }
 
 .contacts {
   display: flex;
-  gap: 40px;
+  gap: 2.5rem;
+  margin-bottom: 3.125rem;
 }
 
 .contacts--wrapper {
   margin-bottom: 1rem;
   flex: 1;
+  position: relative;
 }
 
 .contacts__label {
@@ -141,7 +150,7 @@ h1 + p {
 .contacts__input {
   display: block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: 2.25rem;
   padding: 0.375rem 0.75rem;
   font-family: inherit;
   font-size: 1rem;
@@ -153,10 +162,6 @@ h1 + p {
   appearance: none;
 }
 
-.contacts__input::placeholder {
-  color: #212529;
-  opacity: 0.4;
-}
 
 .contacts__input:focus {
   color: #212529;
@@ -166,12 +171,8 @@ h1 + p {
   border-left: 1px solid #3698FB;
 }
 
-.contacts--wrapper {
-  position: relative;
-}
-
 .contacts--wrapper .contacts__input {
-  height: calc(3.5rem + 2px);
+  height: 3.5rem;
   line-height: 1.25;
   padding: 1rem 0.75rem;
 }
@@ -203,6 +204,66 @@ h1 + p {
 .contacts--wrapper .contacts__input:focus~.contacts__label {
   opacity: .65;
   transform: scale(.85) translateY(-.75rem) translateX(.15rem);
+}
+
+h2 {
+  font-size: 1.25rem;
+}
+
+h2 + p {
+  font-size: 1rem;
+  margin: 0.875rem 0 1.5rem;
+  color: #7B8A92;
+}
+
+/*.type {*/
+/*  display: flex;*/
+/*  justify-content: space-evenly;*/
+/*}*/
+
+.type__input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.type__input + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  margin-right: 1.5rem;
+}
+
+.type__description {
+  margin-left: 0.625rem;
+}
+
+.type__input+label::before {
+  content: '';
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 2px solid #EEE;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.type__input:not(:disabled):not(:checked)+label:hover::before {
+  border-color: #AFAFAF;
+}
+
+.type__input:checked+label::before {
+  border: none;
+  width: 1rem;
+  height: 1rem;
+  background-image: url("img/radio.svg");
+  background-size: contain;
+  background-position: center;
 }
 
 
