--- a/style/main.css
+++ b/style/main.css
@@ -22,7 +22,7 @@ body {
 .wrapper {
     width: 100%;
     display: flex;
-    padding: 5%;
+    padding: 3%;
     height: 100%;
 }
 
@@ -39,7 +39,7 @@ section {
 
 .logo {
     margin: 5% 0 0 5%;
-    min-width: 15%;
+    min-width: 9rem;
     max-width: 20%;
 }
 
@@ -48,7 +48,11 @@ section {
 }
 
 .register--wrapper {
-    margin: 5% 5%;
+    padding: 5% 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 h1 {
@@ -65,7 +69,7 @@ h1 + p {
 .register__btn {
     display: flex;
     justify-content: space-between;
-    gap: 2.5rem;
+    gap: 1rem 2.5rem;
 }
 
 .register__btn > button {
@@ -113,7 +117,7 @@ h1 + p {
     overflow: hidden;
     text-align: center;
     font-size: 0.75rem;
-    margin: 3rem 0;
+    margin: 2rem 0;
 }
 
 .register__line span {
@@ -144,12 +148,11 @@ h1 + p {
 
 .contacts {
     display: flex;
-    gap: 2.5rem;
+    gap: 1rem 2.5rem;
     margin-bottom: 3.125rem;
 }
 
 .contacts--wrapper {
-    margin-bottom: 1rem;
     flex: 1;
     position: relative;
 }
