--- a/style/media.css
+++ b/style/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
     body {
         height: 100%;
     }
@@ -9,8 +9,13 @@
 }
 
 @media screen and (max-width: 720px) {
+
     .wrapper {
         flex-direction: column;
+    }
+
+    .logo {
+        margin: 2%;
     }
 
     .type {
@@ -19,5 +24,7 @@
 
     .contacts {
         flex-direction: column;
+        gap: 1.5rem;
     }
+
 }
