--- a/style/main.css
+++ b/style/main.css
@@ -1,339 +1,368 @@
 @import "media.css";
-
 html {
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *:before, *:after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Barlow', sans-serif;
-    font-weight: normal;
-    background: #EFF6FF;
-    color: #2A4A5C;
-    font-size: 1rem;
-    height: 100vh;
+  font-family: "Barlow", sans-serif;
+  font-weight: normal;
+  background: #EFF6FF;
+  color: #2A4A5C;
+  font-size: 1rem;
+  height: 100vh;
 }
 
 .wrapper {
-    width: 100%;
-    display: flex;
-    padding: 3%;
-    height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 3%;
 }
-
-section {
-    flex: 1;
+.wrapper section {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .bg {
-    background-image: url("img/bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  background-image: url("img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .logo {
-    margin: 5% 0 0 5%;
-    min-width: 9rem;
-    max-width: 20%;
+  margin: 5% 0 0 5%;
+  min-width: 9rem;
+  max-width: 20%;
 }
 
 .register {
-    background: #FFFFFF;
+  background: #FFFFFF;
+}
+.register .register__line {
+  overflow: hidden;
+  text-align: center;
+  font-size: 0.75rem;
+  margin: 2rem 0;
+}
+.register .register__line span {
+  display: inline-block;
+  vertical-align: middle;
+}
+.register .register__line:before, .register .register__line:after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 20%;
+  height: 0.0625rem;
+  background-color: #EEEEEE;
+  position: relative;
+}
+.register .register__line:before {
+  margin-left: -100%;
+  left: -0.625rem;
+}
+.register .register__line:after {
+  margin-right: -100%;
+  right: -0.625rem;
 }
 
 .register--wrapper {
-    padding: 5% 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+  padding: 5% 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+.register--wrapper .register__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 1rem 2.5rem;
+}
+.register--wrapper .register__btn > button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  border: none;
+  padding: 0.9375rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1.25rem;
+  color: #FFFFFF;
+  font-family: "Barlow", sans-serif;
+  cursor: pointer;
+}
+.register--wrapper .register__btn > button > span {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.register--wrapper .register__btn > button:first-of-type {
+  background: #255A9B;
+  padding-left: 0.625rem;
+}
+.register--wrapper .register__btn > button:first-of-type:hover {
+  background: #1b4272;
+}
+.register--wrapper .register__btn > button:last-of-type {
+  background: #0076B6;
+}
+.register--wrapper .register__btn > button:last-of-type:hover {
+  background: #005583;
 }
 
 h1 {
-    font-size: 2rem;
-    font-weight: 600;
+  font-size: 2rem;
+  font-weight: 600;
 }
-
 h1 + p {
-    font-size: 1.25rem;
-    margin: 1.25rem 0 3.125rem;
-    color: #7B8A92;
-}
-
-.register__btn {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem 2.5rem;
-}
-
-.register__btn > button {
-    display: flex;
-    width: 100%;
-    border: none;
-    padding: 0.9375rem;
-    align-items: center;
-    gap: 1.25rem;
-    color: #FFFFFF;
-    font-family: 'Barlow', sans-serif;
-    cursor: pointer;
-}
-
-.register__btn > button > span {
-    width: 1.25rem;
-    height: 1.25rem;
-}
-
-.register__btn > button:first-of-type {
-    background: #255A9B;
-    padding-left: 0.625rem;
-}
-
-.register__btn > button:last-of-type {
-    background: #0076B6;
-}
-
-.register__line {
-    overflow: hidden;
-    text-align: center;
-    font-size: 0.75rem;
-    margin: 2rem 0;
-}
-
-.register__line span {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.register__line:before,
-.register__line:after {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    width: 20%;
-    height: 0.0625rem;
-    background-color: #EEEEEE;
-    position: relative;
-}
-
-.register__line:before {
-    margin-left: -100%;
-    left: -0.625rem;
-}
-
-.register__line:after {
-    margin-right: -100%;
-    right: -0.625rem;
+  font-size: 1.25rem;
+  margin: 1.25rem 0 3.125rem;
+  color: #7B8A92;
 }
 
 .contacts {
-    display: flex;
-    gap: 1rem 2.5rem;
-    margin-bottom: 3.125rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem 2.5rem;
+  margin-bottom: 3.125rem;
 }
 
 .contacts--wrapper {
-    flex: 1;
-    position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
 }
-
-.contacts__label {
-    display: block;
-    margin-bottom: 0.25rem;
-}
-
-.contacts__input {
-    display: block;
-    width: 100%;
-    height: 2.25rem;
-    padding: 0.375rem 0.75rem;
-    font-family: inherit;
-    font-size: 1rem;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #EEEEEE;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-
-
-.contacts__input:focus {
-    color: #212529;
-    background-color: #fff;
-    border-color: #EEEEEE;
-    outline: 0;
-    border-left: 1px solid #3698FB;
-}
-
-.contacts--wrapper .contacts__input {
-    height: 3.5rem;
-    line-height: 1.25;
-    padding: 1rem 0.75rem;
-}
-
 .contacts--wrapper .contacts__label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    padding: 1rem .75rem;
-    pointer-events: none;
-    transform-origin: 0 0;
-    transition: opacity .15s ease-in-out, transform .15s ease-in-out;
+  display: block;
+  margin-bottom: 0.25rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 1rem 0.75rem;
+  pointer-events: none;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transition: opacity 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+}
+.contacts--wrapper .contacts__input {
+  display: block;
+  width: 100%;
+  font-family: inherit;
+  font-size: 1rem;
+  background-color: #FFFFFF;
+  background-clip: padding-box;
+  border: 1px solid #EEEEEE;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 3.5rem;
+  line-height: 1.25;
+  padding: 1rem 0.75rem;
+}
+.contacts--wrapper .contacts__input:focus {
+  color: #2A4A5C;
+  background-color: #FFFFFF;
+  border-color: #EEEEEE;
+  outline: 0;
+  border-left: 1px solid #3698FB;
 }
 
 .contacts--wrapper .contacts__input::-moz-placeholder {
-    color: transparent;
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input:-ms-input-placeholder {
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input::-ms-input-placeholder {
+  color: transparent;
 }
 
 .contacts--wrapper .contacts__input::placeholder {
-    color: transparent;
+  color: transparent;
+}
+
+.contacts--wrapper .contacts__input:not(:-moz-placeholder-shown) {
+  padding-top: 1.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.contacts--wrapper .contacts__input:not(:-ms-input-placeholder) {
+  padding-top: 1.625rem;
+  padding-bottom: 0.625rem;
 }
 
 .contacts--wrapper .contacts__input:focus, .contacts--wrapper .contacts__input:not(:placeholder-shown) {
-    padding-top: 1.625rem;
-    padding-bottom: 0.625rem;
+  padding-top: 1.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.contacts--wrapper .contacts__input:not(:-moz-placeholder-shown) ~ .contacts__label {
+  opacity: 0.65;
+  transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
+}
+
+.contacts--wrapper .contacts__input:not(:-ms-input-placeholder) ~ .contacts__label {
+  opacity: 0.65;
+  transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
 }
 
 .contacts--wrapper .contacts__input:focus ~ .contacts__label, .contacts--wrapper .contacts__input:not(:placeholder-shown) ~ .contacts__label {
-    opacity: 0.65;
-    transform: scale(.85) translateY(-.75rem) translateX(.15rem);
+  opacity: 0.65;
+  -webkit-transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
+          transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
 }
 
 h2 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
-
 h2 + p {
-    font-size: 1rem;
-    margin: 0.875rem 0 1.5rem;
-    color: #7B8A92;
+  font-size: 1rem;
+  margin: 0.875rem 0 1.5rem;
+  color: #7B8A92;
 }
 
 .type {
-    display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .type--wrapper {
-    display: flex;
-    align-items: flex-end;
-}
-
-.type__input + label {
-    margin-right: 0.5rem;
-    text-align: center;
-    font-weight: 600;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .type__icon {
-    margin-right: 3.125rem;
+  margin-right: 3.125rem;
 }
 
 .type__input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 50%;
-    width: 1rem;
-    height: 1rem;
-    border: 2px solid #AFAFAF;
-    transition: 0.2s all linear;
-    outline: none;
-    margin-right: 0.3125rem;
-    position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 50%;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid #AFAFAF;
+  -webkit-transition: 0.2s border linear;
+  transition: 0.2s border linear;
+  outline: none;
+  margin-right: 0.3125rem;
+  position: relative;
 }
-
+.type__input + label {
+  margin-right: 0.5rem;
+  text-align: center;
+  font-weight: 600;
+}
 .type__input:checked {
-    border: 4px solid #3698FB;
+  border: 4px solid #3698FB;
 }
 
 .type__description {
-    max-width: 18.75rem;
-    background: #FFFFFF;
-    -webkit-box-shadow: 0 0 20px 3px rgba(34, 60, 80, 0.07);
-    -moz-box-shadow: 0 0 20px 3px rgba(34, 60, 80, 0.07);
-    box-shadow: 0 0 20px 3px rgba(34, 60, 80, 0.07);
-    padding: 0.625rem;
-    margin: 20px 0;
-    color: #AFAFAF;
+  max-width: 18.75rem;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0 0 20px 3px rgba(34, 60, 80, 0.07);
+  box-shadow: 0 0 20px 3px rgba(34, 60, 80, 0.07);
+  padding: 0.625rem;
+  margin: 20px 0;
+  color: #AFAFAF;
 }
 
 .agree {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
-    color: #AFAFAF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1rem;
+  color: #AFAFAF;
 }
-
-.agree > input[id='agree'] {
-    width: 1rem;
-    height: 1rem;
-    margin-right: 0.5rem;
+.agree > input[id=agree] {
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
 }
-
 .agree > a {
-    color: #3698FB;
-    display: contents;
-    text-decoration: underline;
+  color: #3698FB;
+  display: contents;
+  text-decoration: underline;
 }
 
 .register__form > button {
-    border: none;
-    color: #FFFFFF;
-    font-weight: 600;
-    font-size: 1rem;
-    padding: 0.75rem 4rem;
-    border-radius: 0.25rem;
-    background: #3698FB;
-    -webkit-transition: all 150ms ease-in-out;
-    transition: all 150ms ease-in-out;
-    cursor: pointer;
+  border: none;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.75rem 4rem;
+  border-radius: 0.25rem;
+  background: #3698FB;
+  -webkit-transition: background 150ms ease-in-out;
+  transition: background 150ms ease-in-out;
+  cursor: pointer;
 }
-
 .register__form > button:hover {
-    color: #3698FB;
-    background: transparent;
-    outline: 3px solid #3698FB;
+  background: #0465c7;
 }
 
 @font-face {
-    font-family: 'Barlow';
-    src: url('./fonts/Barlow-SemiBold.eot');
-    src: local('Barlow SemiBold'), local('Barlow-SemiBold'),
-    url('./fonts/Barlow-SemiBold.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Barlow-SemiBold.woff2') format('woff2'),
-    url('./fonts/Barlow-SemiBold.woff') format('woff'),
-    url('./fonts/Barlow-SemiBold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
+  font-family: "Barlow";
+  src: url("./fonts/Barlow-SemiBold.eot");
+  src: local("Barlow SemiBold"), local("Barlow-SemiBold"), url("./fonts/Barlow-SemiBold.eot?#iefix") format("embedded-opentype"), url("./fonts/Barlow-SemiBold.woff2") format("woff2"), url("./fonts/Barlow-SemiBold.woff") format("woff"), url("./fonts/Barlow-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
 }
-
 @font-face {
-    font-family: 'Barlow';
-    src: url('./fonts/Barlow-Regular.eot');
-    src: local('Barlow Regular'), local('Barlow-Regular'),
-    url('./fonts/Barlow-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Barlow-Regular.woff2') format('woff2'),
-    url('./fonts/Barlow-Regular.woff') format('woff'),
-    url('./fonts/Barlow-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Barlow";
+  src: url("./fonts/Barlow-Regular.eot");
+  src: local("Barlow Regular"), local("Barlow-Regular"), url("./fonts/Barlow-Regular.eot?#iefix") format("embedded-opentype"), url("./fonts/Barlow-Regular.woff2") format("woff2"), url("./fonts/Barlow-Regular.woff") format("woff"), url("./fonts/Barlow-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
 @font-face {
-    font-family: 'Barlow';
-    src: url('./fonts/Barlow-ExtraLight.eot');
-    src: local('Barlow ExtraLight'), local('Barlow-ExtraLight'),
-    url('./fonts/Barlow-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Barlow-ExtraLight.woff2') format('woff2'),
-    url('./fonts/Barlow-ExtraLight.woff') format('woff'),
-    url('./fonts/Barlow-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
+  font-family: "Barlow";
+  src: url("./fonts/Barlow-ExtraLight.eot");
+  src: local("Barlow ExtraLight"), local("Barlow-ExtraLight"), url("./fonts/Barlow-ExtraLight.eot?#iefix") format("embedded-opentype"), url("./fonts/Barlow-ExtraLight.woff2") format("woff2"), url("./fonts/Barlow-ExtraLight.woff") format("woff"), url("./fonts/Barlow-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
 }
