--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 1200px) {
+    .wrapper {
+        height: 100%;
+    }
+}
+
 @media screen and (max-width: 1200px) {
     body {
         height: 100%;
